--- a/example.css
+++ b/example.css
@@ -1,3 +1,4 @@
 button.mat-focus-indicator.quarter-width.add-all-btn.filter-field.mat-stroked-button.mat-button-base.mat-primary {
 display:none
 }
+.mat-form-field-flex.ng-tns-c71-26 {display:none}
